--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <section>
             <h3><span>Estudios Cursados</span></h3>
                 <dl>Primaria Completa</dl>
-                    <dt>Marzo 2005 - Diciembre 2010</dt>
-                        <dd>Liceo n°3 “Gregorio Cardozo”</dd>
+                    <dt><Marzo 2005 - Diciembre 2010/dt>
+                        <dd>Escuela n°7 "Gervacia Galarza de Irastorza"</dd>
                 <dl>Secundaria Completa</dl>
                     <dt>Marzo 2011 - Diciembre 2013</dt>
+                        <dd>Liceo n°3 “Gregorio Cardozo”</dd>
+                    <dt>Marzo 2014 - Diciembre 2016</dt>
                         <dd>Bachillerato de Turismo y Hotelería <br> Técnica Superior “Pedro Blanes Viale”</dd>
         </section>
         <section>
