--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
             <h3><span>Estudios Cursados</span></h3>
                 <dl>Primaria Completa</dl>
-                    <dt><Marzo 2005 - Diciembre 2010/dt>
+                    <dt>Marzo 2005 - Diciembre 2010</dt>
                         <dd>Escuela n°7 "Gervacia Galarza de Irastorza"</dd>
                 <dl>Secundaria Completa</dl>
                     <dt>Marzo 2011 - Diciembre 2013</dt>
