Add sobremi.html; minor styling changes.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF -8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./CSS/styles.css">
         <title>Curriculum Vitae</title>
     </head>
@@ -10,6 +13,7 @@
         <header>
             <img id="my-photo" src="./Img/yo.jpg" alt="foto-de-marisol" width="150" height="150">
             <h1>CURRICULUM VITAE DE MARISOL LÓPEZ</h1>
+            <a href="./about-me/sobremi.html"><h6>- Sobre mi-</h6></a>
         </header>
         <section>
                 <h3><span>Datos Personales</span></h3>
@@ -46,8 +50,8 @@
         </section>
         <footer>
             <div>0800 - Marisol</div>
-            <img src="./Img/ico_instagram.png" alt="icono-instagram">
-            <img src="./Img/linkedin log.png" alt="icono-linkedin">
+            <a href="https://www.instagram.com/hello.its.lizzie/" target=”_blank”><img src="./Img/ico_instagram.png" alt="icono-instagram"></a>
+            <a href="https://github.com/MarisolLpez" target=”_blank”><img src="./Img/ico_github.png" alt="icono-github" width="21" height="21"></a>
         </footer>
     </body>
 </html>
