--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="icon" href="./Img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="./CSS/styles.css">
         <title>Curriculum Vitae</title>
     </head>
@@ -13,7 +14,7 @@
         <header>
             <img id="my-photo" src="./Img/yo.jpg" alt="foto-de-marisol" width="150" height="150">
             <h1>CURRICULUM VITAE DE MARISOL LÓPEZ</h1>
-            <a href="./about-me/sobremi.html"><h6>- Sobre mi-</h6></a>
+            <h6><a href="./about-me/sobremi.html">- Sobre mi -</a></h6>
         </header>
         <section>
                 <h3><span>Datos Personales</span></h3>
@@ -47,11 +48,13 @@
             <dl>Certified Tech Developer</dl>
               <dt>2022 - En curso</dt>
                 <dd>Digital House</dd>
+                <img class="gato-miau" src="./Img/miau.png" alt="cool cat"></img>
         </section>
         <footer>
             <div>0800 - Marisol</div>
             <a href="https://www.instagram.com/hello.its.lizzie/" target=”_blank”><img src="./Img/ico_instagram.png" alt="icono-instagram"></a>
             <a href="https://github.com/MarisolLpez" target=”_blank”><img src="./Img/ico_github.png" alt="icono-github" width="21" height="21"></a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./Img/linkedin log.png" alt="icono-linkedin"></a>
         </footer>
     </body>
 </html>
